--- a/React/my-app/public/style.css
+++ b/React/my-app/public/style.css
@@ -25,9 +25,10 @@ footer {
   bottom: 0;
   position: absolute;
   text-align: center;
-  width: 120%;
+  width: 100%;
   height: 2.5rem;
   color: burlywood;
+  font-family: cursive;
 }
 
 .note {
